--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ $(document).ready(function() {
   
 });
 
-function onSignIn(googleUser) {
+var onSignIn = function(googleUser) {
   var profile = googleUser.getBasicProfile();
   console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
   console.log('Name: ' + profile.getName());
@@ -31,7 +31,7 @@ function onSignIn(googleUser) {
   console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
 }
 
-function signOut() {
+var signOut = function() {
   var auth2 = gapi.auth2.getAuthInstance();
   auth2.signOut().then(function () {
     console.log('User signed out.');
