--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Backup Google location history</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/x2js/1.2.0/xml2json.min.js" type="text/javascript"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script type="text/javascript" src="https://api.pryv.com/lib-javascript/latest/pryv.js"></script>
   <style>
@@ -17,12 +18,36 @@
 <br>
 <a href="#" onclick="signOut();">Sign out</a>
 <button id="backup">Backup location history</button>
+<input type="file" id="fileInput">
+
 <script>
 
 var url = "https://www.google.com/maps/timeline/kml?authuser=0&pb=!1m8!1m3!1i2015!2i8!3i2!2m3!1i2015!2i8!3i2";
 
 $(document).ready(function() {
   $("#backup").click(backup);
+  
+  if (window.File && window.FileReader && window.FileList && window.Blob) {
+  // Great success! All the File APIs are supported.
+  } else {
+    alert('The File APIs are not fully supported in this browser.');
+  }
+  
+  $("#fileInput").addEventListener('change', function(e) {
+    var file = fileInput.files[0];
+    var textType = /text.*/;
+    if (file.type.match(textType)) {
+      var reader = new FileReader();
+
+      reader.onload = function(e) {
+        alert(reader.result);
+      }
+
+      reader.readAsText(file);  
+    } else {
+      alert("File not supported!");
+    }
+  });
 });
 
 var backup = function() {
