Do not check type yet

--- a/index.html
+++ b/index.html
@@ -35,19 +35,13 @@ $(document).ready(function() {
   
   $("#fileInput").on('change', function(e) {
     var file = fileInput.files[0];
-    var textType = /text.*/;
-    alert(file.type);
-    if (file.type.match(textType)) {
-      var reader = new FileReader();
-
-      reader.onload = function(e) {
-        alert(reader.result);
-      }
-
-      reader.readAsText(file);  
-    } else {
-      alert("File not supported!");
+    var reader = new FileReader();
+    // TODO: check kml type
+    reader.onload = function(e) {
+      alert(reader.result);
     }
+
+    reader.readAsText(file);  
   });
 });
 
