--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@ $(document).ready(function() {
     reader.onload = function(e) {
       var x2js = new X2JS();
       var jsonObj = x2js.xml_str2json(reader.result);
-      $("#output").val(JSON.stringify(jsonObj));
+      var doc = json.kml.Document;
+      var docName = doc.name;
+      var placemark = doc.Placemark;
+      alert(docName);
     }
 
     reader.readAsText(file);  
