--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ $(document).ready(function() {
     reader.onload = function(e) {
       var x2js = new X2JS();
       var jsonObj = x2js.xml_str2json(reader.result);
-      var doc = json.kml.Document;
+      var doc = jsonObj.kml.Document;
       var docName = doc.name;
       var placemark = doc.Placemark;
       
