--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@ function parseCoordinates(place) {
   //    then start and end coordinates are equal
   var start = coordinates[0].split(",");
   var end = coordinates.length > 1 ? coordinates[1].split(",") : start;
-  
+  if (end==null) {
+    console.log('End is null: 'coordinates);
+  }
   return {
     start: parseFloatArray(start),
     end: parseFloatArray(end)
