--- a/index.html
+++ b/index.html
@@ -81,10 +81,9 @@ function parseCoordinates(place) {
   // 2. A static point (coordinates.length==1)
   //    then start and end coordinates are equal
   var start = coordinates[0].split(",");
+  console.log(coordinates[1]);
   var end = coordinates.length > 1 ? coordinates[1].split(",") : start;
-  if (end==null) {
-    console.log("End is null: " + coordinates);
-  }
+  
   return {
     start: parseFloatArray(start),
     end: parseFloatArray(end)
