--- a/index.html
+++ b/index.html
@@ -213,7 +213,16 @@ var signOut = function() {
 
 var sendToPryv = function() {
   if (pyConnection) {
-    pyConnection.batchCall(batch, function (err, results) {
+    pyConnection.batchCall([
+      {
+        method: 'events.create',
+        params: {
+          streamId: locationStream,
+          type: 'note/txt',
+          content: 'coucou'
+        }
+      }
+    ], function (err, results) {
       $("#output").html(JSON.stringify(results));
     });
   } else {
