--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ var signOut = function() {
 
 var sendToPryv = function() {
   if (pyConnection) {
-    pyConnection.events.create(batch[0].params, function (err, eventCreated) { 
+    pyConnection.events.create(batch, function (err, eventCreated) { 
     });
   } else {
     alert('Login with a Pryv account first!');
