--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ var authSettings = {
   requestingAppId: 'google-timeline-backup',
   requestedPermissions: [
     {
-      streamId: "*",
-      level: 'manage',
+      streamId: locationStream,
+      level: 'contribute',
       defaultName: 'Google Timeline'
     }
   ],
