--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ function parseFloatArray(stringArray) {
 }
 
 var backup = function() {
-  window.open(url+'&'+googlePeriod);
+  window.open(baseURL+'&'+googlePeriod);
 };
 
 var onSignIn = function(googleUser) {
