--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@ function parseFloatArray(stringArray) {
 }
 
 var backup = function() {
+  console.log('Google period: ' + googlePeriod);
   window.open(baseURL+'&'+googlePeriod);
 };
 
