--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ function getGooglePeriod (lastSync) {
 }
 
 function getGoogleTime (timestamp) {
-  var date = new Date(timestamp);
+  var date = timestamp ? new Date(timestamp): new Date();
   var year = date.getFullYear();
   var month = date.getMonth();
   var day = date.getDate();
