--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ function addPlaceToPryvBatch(place) {
   // Inbetween events
   if (coordinates.length > 2) {
     var time = times.begin;
-    var timeStep = (times.begin-times.end)/(coordinates.length-1);
+    var timeStep = (times.end-times.begin)/(coordinates.length-1);
     console.log('Timestep', timeStep);
     for (var i = 1; i<coordinates.length-1; i++) {
       time += timeStep * i;
