--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@ function addPlaceToPryvBatch(place) {
   }
   
   // End event
-  var endCoord = coordinates[1] === "" ? startCoord: coordinates[1];
-  events.push(createLocationEvent(endTime, endCoord, description));
+  var endCoord = coordinates[coordinates.length-1];
+  events.push(createLocationEvent(endTime, endCoord || startCoord, description));
   
   events.forEach(function (event) {
     batch.push({
