--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@ function addPlaceToPryvBatch(place) {
     'Description : ' + place.description;
     
   var coordinatesObj = place.Point || place.LineString;
-  var coordinates = coordinatesObj.coordinates.split(",0").pop();
+  var coordinates = coordinatesObj.coordinates.split(",0");
+  coordinates.pop(); // last element should be ""
   var times = place.TimeSpan;
   var startTime = getPryvTimestamp(times.begin);
   var endTime = getPryvTimestamp(times.end);
